--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -2,17 +2,11 @@ name: Build and Release
 
 on:
   push:
-    branches: [ "main" ]
-    paths:
-      - 'src/**'
-      - 'pom.xml'
-      - '.github/workflows/graalvm.yml'
+    branches: ["main"]
+    paths: ["src/**", "pom.xml", ".github/workflows/graalvm.yml"]
   pull_request:
-    branches: [ "main" ]
-    paths:
-      - 'src/**'
-      - 'pom.xml'
-      - '.github/workflows/graalvm.yml'
+    branches: ["main"]
+    paths: ["src/**", "pom.xml", ".github/workflows/graalvm.yml"]
 
 permissions:
   contents: write
@@ -27,199 +21,196 @@ jobs:
     strategy:
       matrix:
         include:
+          # ---------- Linux ----------
           - os: ubuntu-latest
             arch: amd64
             label: linux-amd64
-            static: false
           - os: ubuntu-latest
             arch: arm64
             label: linux-arm64
-            static: false
+          # ---------- Windows ----------
           - os: windows-latest
             arch: amd64
             label: windows-amd64
-            static: false
+          # ---------- macOS ----------
           - os: macos-latest
             arch: amd64
             label: macos-amd64
-            static: false
           - os: macos-latest
             arch: arm64
             label: macos-arm64
-            static: false
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+    # 1. 拉取代码 -------------------------------------------------------------
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-      - name: Setup GraalVM
-        uses: graalvm/setup-graalvm@v1
-        with:
-          java-version: '21'
-          distribution: 'graalvm'
-          github-token: ${{ secrets.GITHUB_TOKEN }}
-          native-image-job-reports: 'true'
-          architecture: ${{ matrix.arch }}
+    # 2. 安装 GraalVM ---------------------------------------------------------
+    - name: Setup GraalVM
+      uses: graalvm/setup-graalvm@v1
+      with:
+        java-version: '21'
+        distribution: 'graalvm'
+        architecture: ${{ matrix.arch }}
+        github-token: ${{ secrets.GITHUB_TOKEN }}
+        native-image-job-reports: 'true'
 
-      - name: Build with Maven (executable JAR)
-        run: |
-          mvn -B clean package --file pom.xml
+    # 3. Maven 构建（产出 fat-jar）--------------------------------------------
+    - name: Build with Maven
+      run: mvn -B clean package
 
+    # 4. 复制 fat-jar → app.jar（排除 original-*.jar）--------------------------
+    - name: Prepare Native Build Directory
+      shell: bash
+      run: |
+        set -e
+        mkdir -p target/native-image
+        FAT=$(find target -maxdepth 1 -type f -name "*.jar" ! -name "original-*.jar" | head -n1)
+        if [[ -z "$FAT" ]]; then
+          echo "::error::Fat JAR not found"; exit 1
+        fi
+        cp "$FAT" target/native-image/app.jar
+        echo "Using fat-jar: $FAT"
+        ls -lh target/native-image
 
-      # —— Prepare 原生构建目录 —— #
-      - name: Prepare Native Build Directory (Linux/macOS)
-        if: runner.os != 'Windows'
-        shell: bash
-        run: |
-          mkdir -p target/native-image
-          cp target/biliTickerBuy-1.0-SNAPSHOT.jar target/native-image/
+    # 5. Windows native-image -------------------------------------------------
+    - name: Build Native Image (Windows)
+      if: matrix.os == 'windows-latest'
+      shell: pwsh
+      run: |
+        Copy-Item -Path config -Destination target/native-image -Recurse -Force
+        Push-Location target/native-image
+        native-image.cmd `
+          -H:+AllowDeprecatedBuilderClassesOnImageClasspath `
+          --initialize-at-run-time `
+          -H:+UnlockExperimentalVMOptions `
+          -H:-CheckToolchain `
+          --no-fallback `
+          --enable-https --enable-http `
+          -H:+JNI `
+          -H:ResourceConfigurationFiles=config/resource-config.json `
+          -H:ReflectionConfigurationFiles=config/reflect-config.json `
+          -H:JNIConfigurationFiles=config/jni-config.json `
+          -H:DynamicProxyConfigurationFiles=config/proxy-config.json `
+          -H:SerializationConfigurationFiles=config/serialization-config.json `
+          -H:+AddAllCharsets -H:+IncludeAllLocales `
+          -jar app.jar `
+          -H:Name=biliTickerBuy-${{ matrix.label }}
+        Pop-Location
 
-      - name: Prepare Native Build Directory (Windows)
-        if: runner.os == 'Windows'
-        shell: pwsh
-        run: |
-          New-Item -ItemType Directory -Force -Path target\native-image
-          ls .\target
-          Copy-Item 
-            -Path target\biliTickerBuy-1.0-SNAPSHOT.jar 
-            -Destination target\native-image\
+    # 6. Linux native-image ---------------------------------------------------
+    - name: Build Native Image (Linux)
+      if: matrix.os == 'ubuntu-latest'
+      shell: bash
+      run: |
+        cp -r config target/native-image/
+        pushd target/native-image
+        native-image \
+          -H:+AllowDeprecatedBuilderClassesOnImageClasspath \
+          --initialize-at-run-time \
+          -H:+UnlockExperimentalVMOptions \
+          -H:-CheckToolchain \
+          --no-fallback \
+          --enable-https --enable-http \
+          -H:+JNI \
+          -H:ResourceConfigurationFiles=config/resource-config.json \
+          -H:ReflectionConfigurationFiles=config/reflect-config.json \
+          -H:JNIConfigurationFiles=config/jni-config.json \
+          -H:DynamicProxyConfigurationFiles=config/proxy-config.json \
+          -H:SerializationConfigurationFiles=config/serialization-config.json \
+          -H:+AddAllCharsets -H:+IncludeAllLocales \
+          --gc=G1 \
+          -jar app.jar \
+          -H:Name=biliTickerBuy-${{ matrix.label }}
+        popd
 
-      # —— Windows 原生镜像构建 —— #
-      - name: Build Native Image (Windows)
-        if: matrix.os == 'windows-latest'
-        shell: pwsh            # ← 改为 pwsh
-        run: |
+    # 7. macOS native-image ---------------------------------------------------
+    - name: Build Native Image (macOS)
+      if: matrix.os == 'macos-latest'
+      shell: bash
+      run: |
+        cp -r config target/native-image/
+        pushd target/native-image
+        native-image \
+          -H:+AllowDeprecatedBuilderClassesOnImageClasspath \
+          --initialize-at-run-time \
+          -H:+UnlockExperimentalVMOptions \
+          -H:-CheckToolchain \
+          --no-fallback \
+          --enable-https --enable-http \
+          -H:+JNI \
+          -H:ResourceConfigurationFiles=config/resource-config.json \
+          -H:ReflectionConfigurationFiles=config/reflect-config.json \
+          -H:JNIConfigurationFiles=config/jni-config.json \
+          -H:DynamicProxyConfigurationFiles=config/proxy-config.json \
+          -H:SerializationConfigurationFiles=config/serialization-config.json \
+          -H:+AddAllCharsets -H:+IncludeAllLocales \
+          -jar app.jar \
+          -H:Name=biliTickerBuy-${{ matrix.label }}
+        popd
 
-          # 创建 native-image 目录并准备文件
-          New-Item -ItemType Directory -Force -Path target\native-image
-          Copy-Item -Path config -Destination target\native-image\ -Recurse -Force
-          Copy-Item -Path $jar.FullName -Destination target\native-image\
-      
-          # 进入目录开始构建
-          Push-Location target\native-image
-          native-image.cmd 
-            -jar biliTickerBuy-1.0-SNAPSHOT.jar 
-            --initialize-at-run-time 
-            -H:+UnlockExperimentalVMOptions 
-            -H:-CheckToolchain 
-            --no-fallback 
-            --enable-https 
-            --enable-http 
-            -H:+JNI 
-            -H:ResourceConfigurationFiles=config/resource-config.json 
-            -H:ReflectionConfigurationFiles=config/reflect-config.json 
-            -H:JNIConfigurationFiles=config/jni-config.json 
-            -H:DynamicProxyConfigurationFiles=config/proxy-config.json 
-            -H:SerializationConfigurationFiles=config/serialization-config.json 
-            -H:+AddAllCharsets 
-            -H:+IncludeAllLocales 
-            -H:+AllowDeprecatedBuilderClassesOnImageClasspath
-            -H:Name=biliTickerBuy-${{ matrix.label }} 
-            ${{ matrix.static && '--static' || '' }}
-          Pop-Location
+    # 8. 收集可执行文件与动态库 ----------------------------------------------
+    - name: Stage Binaries & Shared Libs
+      shell: bash
+      run: |
+        set -e
+        OUT=dist/${{ matrix.label }}
+        mkdir -p "$OUT"
+        BIN=target/native-image/biliTickerBuy-${{ matrix.label }}${{ matrix.os == 'windows-latest' && '.exe' || '' }}
+        cp "$BIN" "$OUT"/
+        find target/native-image -maxdepth 1 -type f \( -name "*.so" -o -name "*.dll" -o -name "*.dylib" \) -exec cp {} "$OUT"/ \;
+        ls -R "$OUT"
 
-      # —— Linux 原生镜像构建 —— #
-      - name: Build Native Image (Linux)
-        if: matrix.os == 'ubuntu-latest'
-        shell: bash
-        run: |
-          cp -r config target/native-image/
-          pushd target/native-image
-          native-image \
-            --initialize-at-run-time \
-            -H:+UnlockExperimentalVMOptions \
-            -H:-CheckToolchain \
-            --no-fallback \
-            --enable-https \
-            --enable-http \
-            -H:+JNI \
-            -H:ResourceConfigurationFiles=config/resource-config.json -H:ReflectionConfigurationFiles=config/reflect-config.json -H:JNIConfigurationFiles=config/jni-config.json -H:DynamicProxyConfigurationFiles=config/proxy-config.json -H:SerializationConfigurationFiles=config/serialization-config.json \
-            -H:+AddAllCharsets \
-            -H:+IncludeAllLocales \
-            -H:+AllowDeprecatedBuilderClassesOnImageClasspath \
-            --gc=G1 \
-            -jar biliTickerBuy-1.0-SNAPSHOT.jar \
-            -H:Name=biliTickerBuy-${{ matrix.label }} \
-            ${{ matrix.static && '--static' || '' }}
-          popd
+    # 9. 上传各平台产物（含动态库）--------------------------------------------
+    - name: Upload Native Package
+      uses: actions/upload-artifact@v4
+      with:
+        name: biliTickerBuy-${{ matrix.label }}
+        path: dist/${{ matrix.label }}
+        retention-days: 5
 
-      # —— macOS 原生镜像构建 —— #
-      - name: Build Native Image (macOS)
-        if: matrix.os == 'macos-latest'
-        shell: bash
-        run: |
-          cp -r config target/native-image/
-          pushd target/native-image
-          native-image \
-            --initialize-at-run-time \
-            -H:+AllowDeprecatedBuilderClassesOnImageClasspath \
-            -H:+UnlockExperimentalVMOptions \
-            -H:-CheckToolchain \
-            --no-fallback \
-            --enable-https \
-            --enable-http \
-            -H:+JNI \
-            -H:ResourceConfigurationFiles=config/resource-config.json -H:ReflectionConfigurationFiles=config/reflect-config.json -H:JNIConfigurationFiles=config/jni-config.json -H:DynamicProxyConfigurationFiles=config/proxy-config.json -H:SerializationConfigurationFiles=config/serialization-config.json \
-            -H:+AddAllCharsets \
-            -H:+IncludeAllLocales \
-            -jar biliTickerBuy-1.0-SNAPSHOT.jar \
-            -H:Name=biliTickerBuy-${{ matrix.label }} \
-            ${{ matrix.static && '--static' || '' }}
-          popd
+    # 10. 仅 ubuntu-amd64 上传 fat-jar ----------------------------------------
+    - name: Upload JAR Artifacts
+      if: matrix.os == 'ubuntu-latest' && matrix.arch == 'amd64'
+      uses: actions/upload-artifact@v4
+      with:
+        name: jar-files
+        path: |
+          target/*.jar
+          !target/original-*.jar
+        retention-days: 5
 
-      - name: Upload JAR Artifacts
-        if: matrix.os == 'ubuntu-latest' && matrix.arch == 'amd64'
-        uses: actions/upload-artifact@v4
-        with:
-          name: jar-files
-          path: |
-            target/*-jar-with-dependencies.jar
-            target/*-all.jar
-            target/*.jar
-            "!target/original-*.jar"      # <- 必须加引号才能正确排除
-          retention-days: 5
-          
-      - name: Upload Native Binaries
-        uses: actions/upload-artifact@v4
-        with:
-          name: biliTickerBuy-${{ matrix.label }}
-          path: |
-            target/native-image/biliTickerBuy-${{ matrix.label }}${{ matrix.os == 'windows-latest' && '.exe' || '' }}
-          retention-days: 5
-
-
+# ─────────────────────────── 发布阶段 ──────────────────────────────
   release:
     needs: java-build
     runs-on: ubuntu-latest
     steps:
-      # 下载所有构建产物到 artifacts 目录
-      - name: Download Build Artifacts
+      # 1. 下载所有构建产物
+      - name: Download Artifacts
         uses: actions/download-artifact@v4
         with:
-          path: .
+          path: artifacts
 
-      # 对每个构建产物单独打包成 zip 文件
-      - name: Zip individual build artifacts for release
+      # 2. 分别 zip
+      - name: Zip each artifact directory
+        shell: bash
         run: |
-          for dir in ./*; do
-            if [ -d "$dir" ]; then
-              zip -r "${dir}.zip" "$dir"
-            fi
+          cd artifacts
+          for dir in */ ; do
+            zip -r "../${dir%/}.zip" "$dir"
           done
 
-      # 设置日期用于 release tag（格式为 YYYY.MM.DD）
+      # 3. 设置日期 tag
       - name: Set up date
-        id: date
         run: echo "DATE=$(date +'%Y.%m.%d')" >> $GITHUB_ENV
 
-      # 创建 release，并上传所有单独打包好的 zip 文件
-      - name: Create Release
-        id: create_release
+      # 4. 创建 Release
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: v${{ env.DATE }}
           name: Release v${{ env.DATE }}
+          files: '*.zip'
           draft: false
           prerelease: false
-          files: ./*.zip
           token: ${{ secrets.GITHUB_TOKEN }}
