--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -21,28 +21,33 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: ubuntu-latest   # linux-amd64
+          # ───────── Linux ─────────
+          - os: ubuntu-latest
             arch: amd64
             label: linux-amd64
-          - os: ubuntu-latest   # linux-arm64
+          - os: ubuntu-latest
             arch: arm64
             label: linux-arm64
-          - os: windows-latest  # windows-amd64
+          # ───────── Windows ───────
+          - os: windows-latest
             arch: amd64
             label: windows-amd64
-          - os: macos-latest    # mac-amd64
+          # ───────── macOS ─────────
+          - os: macos-latest
             arch: amd64
             label: macos-amd64
-          - os: macos-latest    # mac-arm64
+          - os: macos-latest
             arch: arm64
             label: macos-arm64
 
     steps:
-    # ── 1. 拉代码 ───────────────────────────────────────────────
-    - uses: actions/checkout@v4
+    # 1️⃣  克隆仓库 -----------------------------------------------------------
+    - name: Checkout repository
+      uses: actions/checkout@v4
 
-    # ── 2. 安装 GraalVM 21 ─────────────────────────────────────
-    - uses: graalvm/setup-graalvm@v1
+    # 2️⃣  安装 GraalVM -------------------------------------------------------
+    - name: Setup GraalVM
+      uses: graalvm/setup-graalvm@v1
       with:
         java-version: '21'
         distribution: 'graalvm'
@@ -50,45 +55,119 @@ jobs:
         github-token: ${{ secrets.GITHUB_TOKEN }}
         native-image-job-reports: 'true'
 
-    # ── 3. Maven 构建（fat-jar 在 target/ 下）──────────────────
+    # 3️⃣  Maven 构建（生成 fat-jar）------------------------------------------
     - name: Build with Maven
       run: mvn -B clean package
 
-    # ── 4. 复制 fat-jar → app.jar（排除 original-*.jar）──────────
+    # 4️⃣  复制 fat-jar → app.jar（排除 original-*.jar）-----------------------
     - name: Prepare Native Build Directory
       shell: bash
       run: |
         set -e
         mkdir -p target/native-image
         FAT=$(find target -maxdepth 1 -type f -name "*.jar" ! -name "original-*.jar" | head -n1)
-        [[ -z "$FAT" ]] && { echo "::error::fat-jar not found"; exit 1; }
+        [[ -z "$FAT" ]] && { echo "::error::Fat JAR not found"; exit 1; }
         cp "$FAT" target/native-image/app.jar
         echo "Using fat-jar: $FAT"
+        ls -lh target/native-image
 
-    # ── 5-7. 各平台 native-image（命令同之前，略）──────────────
-    # ……（保持你之前的 Windows / Linux / macOS native-image 步骤）……
+    # 5️⃣  Windows native-image ----------------------------------------------
+    - name: Build Native Image (Windows)
+      if: matrix.os == 'windows-latest'
+      shell: pwsh
+      run: |
+        Copy-Item -Path config -Destination target/native-image -Recurse -Force
+        Push-Location target/native-image
+        native-image.cmd `
+          -H:+AllowDeprecatedBuilderClassesOnImageClasspath `
+          --initialize-at-run-time `
+          -H:+UnlockExperimentalVMOptions `
+          -H:-CheckToolchain `
+          --no-fallback `
+          --enable-https --enable-http `
+          -H:+JNI `
+          -H:ResourceConfigurationFiles=config/resource-config.json `
+          -H:ReflectionConfigurationFiles=config/reflect-config.json `
+          -H:JNIConfigurationFiles=config/jni-config.json `
+          -H:DynamicProxyConfigurationFiles=config/proxy-config.json `
+          -H:SerializationConfigurationFiles=config/serialization-config.json `
+          -H:+AddAllCharsets -H:+IncludeAllLocales `
+          -jar app.jar `
+          -H:Name=biliTickerBuy-${{ matrix.label }}
+        Pop-Location
 
-    # ── 8. 打包 exe + 动态库 ───────────────────────────────────
-    - name: Stage native package
+    # 6️⃣  Linux native-image -------------------------------------------------
+    - name: Build Native Image (Linux)
+      if: matrix.os == 'ubuntu-latest'
+      shell: bash
+      run: |
+        cp -r config target/native-image/
+        pushd target/native-image
+        native-image \
+          -H:+AllowDeprecatedBuilderClassesOnImageClasspath \
+          --initialize-at-run-time \
+          -H:+UnlockExperimentalVMOptions \
+          -H:-CheckToolchain \
+          --no-fallback \
+          --enable-https --enable-http \
+          -H:+JNI \
+          -H:ResourceConfigurationFiles=config/resource-config.json \
+          -H:ReflectionConfigurationFiles=config/reflect-config.json \
+          -H:JNIConfigurationFiles=config/jni-config.json \
+          -H:DynamicProxyConfigurationFiles=config/proxy-config.json \
+          -H:SerializationConfigurationFiles=config/serialization-config.json \
+          -H:+AddAllCharsets -H:+IncludeAllLocales \
+          --gc=G1 \
+          -jar app.jar \
+          -H:Name=biliTickerBuy-${{ matrix.label }}
+        popd
+
+    # 7️⃣  macOS native-image -------------------------------------------------
+    - name: Build Native Image (macOS)
+      if: matrix.os == 'macos-latest'
+      shell: bash
+      run: |
+        cp -r config target/native-image/
+        pushd target/native-image
+        native-image \
+          -H:+AllowDeprecatedBuilderClassesOnImageClasspath \
+          --initialize-at-run-time \
+          -H:+UnlockExperimentalVMOptions \
+          -H:-CheckToolchain \
+          --no-fallback \
+          --enable-https --enable-http \
+          -H:+JNI \
+          -H:ResourceConfigurationFiles=config/resource-config.json \
+          -H:ReflectionConfigurationFiles=config/reflect-config.json \
+          -H:JNIConfigurationFiles=config/jni-config.json \
+          -H:DynamicProxyConfigurationFiles=config/proxy-config.json \
+          -H:SerializationConfigurationFiles=config/serialization-config.json \
+          -H:+AddAllCharsets -H:+IncludeAllLocales \
+          -jar app.jar \
+          -H:Name=biliTickerBuy-${{ matrix.label }}
+        popd
+
+    # 8️⃣  打包可执行文件 + 动态库 -------------------------------------------
+    - name: Stage Native Package
       shell: bash
       run: |
         set -e
         OUT=dist/${{ matrix.label }}
         mkdir -p "$OUT"
-        # 直接拷贝整个 native-image 目录，保证 dll/so/dylib 全在同一处
+        # 将 target/native-image 内全部内容打包（exe/elf + *.dll/*.so/*.dylib + app.jar + config）
         cp -r target/native-image/* "$OUT"/
         ls -R "$OUT"
 
-    # ── 9. 上传平台产物（含动态库）──────────────────────────────
-    - name: Upload native artifacts
+    # 9️⃣  上传平台产物 -------------------------------------------------------
+    - name: Upload Native Artifacts
       uses: actions/upload-artifact@v4
       with:
         name: biliTickerBuy-${{ matrix.label }}
         path: dist/${{ matrix.label }}
         retention-days: 5
 
-    # ── 10. 仅 linux-amd64 上传 fat-jar ────────────────────────
-    - name: Upload JAR
+    # 🔟  仅 ubuntu-amd64 上传 fat-jar ---------------------------------------
+    - name: Upload JAR Artifacts
       if: matrix.os == 'ubuntu-latest' && matrix.arch == 'amd64'
       uses: actions/upload-artifact@v4
       with:
@@ -98,16 +177,19 @@ jobs:
           !target/original-*.jar
         retention-days: 5
 
-# ────────────────────────── Release 阶段 ──────────────────────────
+# ────────────────────────── 发布阶段 ──────────────────────────────
   release:
     needs: java-build
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/download-artifact@v4
+      # 1. 下载所有构建产物
+      - name: Download Artifacts
+        uses: actions/download-artifact@v4
         with:
           path: artifacts
 
-      - name: Zip each artifact dir
+      # 2. 单独 zip 每个目录
+      - name: Zip Each Artifact Directory
         shell: bash
         run: |
           cd artifacts
@@ -115,13 +197,17 @@ jobs:
             zip -r "../${dir%/}.zip" "$dir"
           done
 
-      - name: Set tag date
+      # 3. 生成日期 tag
+      - name: Set Up Date
         run: echo "DATE=$(date +'%Y.%m.%d')" >> $GITHUB_ENV
 
+      # 4. 创建 GitHub Release
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v1
         with:
           tag_name: v${{ env.DATE }}
           name: Release v${{ env.DATE }}
           files: '*.zip'
+          draft: false
+          prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
