--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -33,7 +33,7 @@ jobs:
           - os: windows-latest
             arch: amd64
             label: windows-amd64
-            static: true
+            static: false
           - os: macos-latest
             arch: amd64
             label: macos-amd64
