--- a/.github/workflows/graalvm.yml
+++ b/.github/workflows/graalvm.yml
@@ -59,8 +59,9 @@ jobs:
           libx11-dev libxtst-dev libxext-dev libxi-dev libxrandr-dev libxinerama-dev \
           libxcursor-dev libxrender-dev libfontconfig1-dev libfreetype6-dev \
           libgtk-3-dev libglib2.0-dev libgdk-pixbuf2.0-dev libcairo2-dev \
-          libpango1.0-dev libharfbuzz-dev libatk1.0-dev libgmodule-2.0-dev \
+          libpango1.0-dev libharfbuzz-dev libatk1.0-dev \
           libgl1-mesa-dev freeglut3-dev
+
 
     # 3️⃣  Liberica NIK + FX ---------------------------------------------------
     - name: Setup Liberica NIK (with JavaFX)
